@@ -1639,63 +1639,75 @@ div.overlay #createGroup fieldset { border: none; }
 /* @group Content History */
 
 #content-history #history dd {
-	margin-top: 0.8em;
 }
 
 #content-history div.historyRecord {
-	font-size: 90%;
-	margin-bottom: 10px;
+	margin-bottom: 1em;
 }
 
 
 #content-history div.historyTools ul {
 	float: right;
-	list-style-image: none;
-	list-style-position: outside;
-	list-style-type: none;
-	margin-top: 0;
+	margin: 0.5em 1em;	
 }
 
 #content-history div.historyTools ul li {
 	display: inline;
+	padding: 0 0.015em;
 }
 
 #content-history div.historyTools ul li a{
 	border-bottom: none;
 }
 
+#content-history div.historyTools form {
+	display: inline;
+}
 
 #content-history .historyAction {
-	color: &dtml-contentViewFontColor;;
+
 }
 
 #content-history .historyByLine {
-	margin-bottom: 1em;
+	background: #ddd;
+	padding: 0.5em;
+	border-top-right-radius: 0.5em;
+	border-top-left-radius: 0.5em;
+	-webkit-border-top-right-radius: 0.5em;
+	-webkit-border-top-left-radius: 0.5em;
+	-moz-border-radius-topleft: 0.5em;
+	-moz-border-radius-topright: 0.5em;
 }
+
+#content-history div.historyLinks {
+	float: right;
+	clear: right;
+	margin: 0.5em 1em 0 0;
+}
+
+
 #content-history div.historyComment {
-	background-color: &dtml-globalBackgroundColor;;
-	padding: 0.25em 1em;
+	padding: 0.5em 1em;
+	border: 1px solid #ddd;
 }
 
 #content-history div.historyComment p {
-	color: &dtml-fontColor;;
 	margin: 0;
 	padding-top: 1px;	
 }
 
 #content-history a.historyComparePrevious {
-	border-bottom: medium none;
-	border-top: 1px dotted &dtml-globalBorderColor;;
+	border-top: 1px dotted #ccc;
 	display: block;
-	margin-bottom: -15px;
-	margin-top: 11px;
+	margin-top: 3em;
+	text-align: center;
 }
 
-#content-history dl div.historyRecord a.historyComparePrevious span {
+#content-history a.historyComparePrevious span {
 	background-color: white;
-	left: 50%;
 	position: relative;
-	top: -1em;
+	top: -0.75em;
+	padding: 0 0.5em;
 }
 
 /* @end */
